# WealthCore

./: .gitignore  README.md  ROADMAP.md
Frontend/src/: routeTree.gen.ts  styles.css
Frontend/src/components/: AppShell.tsx  CategoryIcon.tsx  Coin.tsx  Empty.tsx  PublicNav.tsx  StatCard.tsx
Frontend/src/lib/: accounts.ts  api.ts  auth.ts  budgets.ts  categories.ts  category-icons.tsx  currency.ts  date.ts  financeEvents.ts  mockData.ts  reports.ts  transactions.ts
Frontend/src/routes/: app.accounts.tsx  app.budget.tsx  app.categories.tsx  app.index.tsx  app.reports.tsx  app.settings.tsx  app.transactions.tsx  app.tsx  index.tsx  login.tsx  register.tsx
backend/: .env.example  README.md  dbschema.md  pyproject.toml
backend/app/: __init__.py  account_routes.py  auth.py  auth_routes.py  budget_routes.py  category_icons.py  category_routes.py  config.py  finance_service.py  models.py  recurring_routes.py  recurring_service.py  report_routes.py  routes.py  settings_routes.py  taxonomy_defaults.py  transaction_routes.py
backend/migrations/versions/: 4f5a0b6b6cbf_recurring_rules_details.py  6f2b76a9f4c1_category_icons_and_taxonomy.py  8c9d4b7e1a2f_reporting_views.py  a706a92e1343_initial_schema.py  f01f70889d55_phase3_account_initial_balance.py
backend/scripts/: seed_demo.py  seed_demo_personas.py
